addes Whitespace theme, created first post, edited config

--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 # ----------------------- #
 
 url: http://johnnydeez.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: Moto Plugg
+subtitle: Look cool. Don't die. Ride on.
+author: John DeVries
 simple_search: http://google.com/search
-description:
+description: Motorcycle gear reviews, riding safety tips and general ride reports.
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
